--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,24 @@
 version: "3.4"
 
 services:
+  grafana:
+    container_name: grafana
+    image: ghcr.io/volkovlabs/bi-app:latest
+    env_file: .env
+    ports:
+      - 3000:3000
+    volumes:
+      - ./grafana:/var/lib/grafana
+
+  engine:
+    container_name: engine
+    image: ghcr.io/volkovlabs/bi-engine:latest
+    env_file: .env
+    ports:
+      - 3001:3001
+    volumes:
+      - ./conf:/app/conf
+
   webhook-json:
     container_name: webhook-json
     build:
