--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ GRAFANA_URL=http://grafana:3000
 ##
 ## Database (Timescale) Host
 ##
-DATABASE_HOST=host.docker.internal
+DATABASE_HOST=database
 
 ##
 ## Database (Timescale) Port
