Add Timescale database (#2)
* Add Timescale database

* Remove old configuration

* Add video

* Update Docker compose

--- a/.env
+++ b/.env
@@ -30,8 +30,33 @@ GRAFANA_TOKEN=SERVICE-ACCOUNT-TOKEN
 ##
 GRAFANA_URL=http://grafana:3000
 
+##
+## Database (Timescale) Host
+##
+DATABASE_HOST=database
+
+##
+## Database (Timescale) Port
+##
+DATABASE_PORT=5432
+
+##
+## Database (Timescale) User
+##
+DATABASE_USERNAME=postgres
+
+##
+## Database (Timescale) Password
+##
+DATABASE_PASSWORD=postgres
+
 ########################### Grafana Configuration ###########################
 ##
 ## API Server URL to configure Engine Data Source
 ##
 ENGINE_URL=http://engine:3001
+
+##
+## Anonymous Authentication
+##
+GF_AUTH_ANONYMOUS_ENABLED=true
