--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,30 @@ version: "3.4"
 services:
   grafana:
     container_name: grafana
-    image: ghcr.io/volkovlabs/bi-app:latest
+    image: ghcr.io/volkovlabs/bi-app:1.1.0
     env_file: .env
     ports:
       - 3000:3000
     volumes:
       - ./grafana:/var/lib/grafana
 
+  database:
+    container_name: database
+    image: timescale/timescaledb:latest-pg14
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - 5432:5432
+    volumes:
+      - ./database:/docker-entrypoint-initdb.d
+
   engine:
     container_name: engine
-    image: ghcr.io/volkovlabs/bi-engine:latest
+    depends_on:
+      - database
+      - grafana
+    image: ghcr.io/volkovlabs/bi-engine:1.1.0
     env_file: .env
     ports:
       - 3001:3001
