--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.4"
 services:
   grafana:
     container_name: grafana
-    image: ghcr.io/volkovlabs/bi-app:1.1.0
+    image: ghcr.io/volkovlabs/bi-app:latest
     env_file: .env
     ports:
       - 3000:3000
@@ -18,15 +18,13 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - 5432:5432
-    volumes:
-      - ./database:/docker-entrypoint-initdb.d
 
   engine:
     container_name: engine
     depends_on:
       - database
       - grafana
-    image: ghcr.io/volkovlabs/bi-engine:1.1.0
+    image: ghcr.io/volkovlabs/bi-engine:latest
     env_file: .env
     ports:
       - 3001:3001
