--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.4"
 services:
   grafana:
     container_name: grafana
-    image: ghcr.io/volkovlabs/bi-app:latest
+    image: ghcr.io/volkovlabs/bi-app:1.2.0
     env_file: .env
     ports:
       - 3000:3000
@@ -24,12 +24,10 @@ services:
     depends_on:
       - database
       - grafana
-    image: ghcr.io/volkovlabs/bi-engine:latest
+    image: ghcr.io/volkovlabs/bi-engine:1.2.0
     env_file: .env
     ports:
       - 3001:3001
-    volumes:
-      - ./conf:/app/conf
 
   webhook-json:
     container_name: webhook-json
