Update Docker Compose to use Grafana image

--- a/.env
+++ b/.env
@@ -60,3 +60,8 @@ ENGINE_URL=http://engine:3001
 ## Anonymous Authentication
 ##
 GF_AUTH_ANONYMOUS_ENABLED=true
+
+##
+## Home Dashboard
+##
+GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/etc/grafana/provisioning/dashboards/home.json
