--- a/.env
+++ b/.env
@@ -60,3 +60,14 @@ ENGINE_URL=http://engine:3001
 ## Anonymous Authentication
 ##
 GF_AUTH_ANONYMOUS_ENABLED=true
+
+##
+## Default Theme
+##
+GF_USERS_DEFAULT_THEME=light
+
+##
+## Disable Native Alerting
+##
+GF_ALERTING_ENABLED=false
+GF_UNIFIED_ALERTING_ENABLED=false
