--- a/node-red/package.json
+++ b/node-red/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "node-red-contrib-slack": "~2.0.0"
   },
-  "description": "A Node-RED Project from Business Intelligence Toolkit",
+  "description": "A Node-RED Project from Business Intelligence for Grafana",
   "name": "volkovlabs-bi-node-red",
   "private": true,
   "version": "1.0.0"
