--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "author": "Volkov Labs",
   "dependencies": {},
-  "description": "Business Intelligence Toolkit",
+  "description": "Business Intelligence for Grafana",
   "engines": {
     "node": ">=18"
   },
   "license": "Apache-2.0",
-  "name": "volkovlabs-bi-toolkit",
+  "name": "volkovlabs-bi-grafana",
   "scripts": {
     "start": "docker compose pull && docker compose up",
     "stop": "docker compose down"
