Update Application and Engine to 1.3.0

--- a/.env
+++ b/.env
@@ -31,6 +31,17 @@ GRAFANA_TOKEN=SERVICE-ACCOUNT-TOKEN
 GRAFANA_URL=http://grafana:3000
 
 ##
+## Grafana Health-Check timeout, ms
+## Waiting for Grafana availability for (Timeout * Number of Retries / 1000 ) seconds
+##
+GRAFANA_HEALTH_CHECK_TIMEOUT=1000
+
+##
+## Grafana Health-Check number of retries
+##
+GRAFANA_HEALTH_CHECK_RETRY=5
+
+##
 ## Database (Timescale) Host
 ##
 DATABASE_HOST=database
