Update BI App and BI Engine 1.4.0

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-########################### Engine Configuration ############################
+########################### Engine Container Configuration ############################
 ##
 ## Security Token
 ## - Community token issued with each new major version and valid for a year
@@ -42,6 +42,11 @@ GRAFANA_HEALTH_CHECK_TIMEOUT=1000
 GRAFANA_HEALTH_CHECK_RETRY=5
 
 ##
+## Grafana Data Source requests timeout, ms
+##
+GRAFANA_REQUEST_TIMEOUT=30000
+
+##
 ## Database (Timescale) Host
 ##
 DATABASE_HOST=database
@@ -61,7 +66,7 @@ DATABASE_USERNAME=postgres
 ##
 DATABASE_PASSWORD=postgres
 
-########################### Grafana Configuration ###########################
+########################### Grafana Container Configuration ###########################
 ##
 ## API Server URL to configure Engine Data Source
 ##
