--- a/.env
+++ b/.env
@@ -34,8 +34,8 @@ ENGINE_ALERT_BATCH_SIZE=2
 ENGINE_NODE_ID=1
 
 ##
-## Generate and start Swagger API
-## Available at /swagger
+## Generate and start Swagger for API documentation
+## UI is available at ENGINE_SERVER_PORT/swagger
 ##
 ## ENGINE_API_DOCUMENTATION=true
 
