--- a/.env
+++ b/.env
@@ -30,6 +30,7 @@ ENGINE_ALERT_BATCH_SIZE=2
 
 ##
 ## Unique Node Id for distributed alert scheduling
+## Should be unique for each Engine
 ##
 ENGINE_NODE_ID=1
 
