Update BI App and Engine 1.7.0 (#14)
* Update BI App and Engine 1.7.0

* Update .env

* Update .env

* Update CHANGELOG.md

--- a/.env
+++ b/.env
@@ -29,6 +29,18 @@ ENGINE_SCHEDULER_PORT=3002
 ENGINE_ALERT_BATCH_SIZE=2
 
 ##
+## Unique Node Id for distributed alert scheduling
+## Should be unique for each Engine
+##
+ENGINE_NODE_ID=1
+
+##
+## Generate and start Swagger for API documentation
+## UI is available at ENGINE_SERVER_PORT/swagger
+##
+## ENGINE_API_DOCUMENTATION=true
+
+##
 ## Service Account
 ## - Viewer permission is required to access dashboards
 ## - Editor permission is required to access dashboards and add Annotations
