--- a/provisioning/datasources/datasources.yaml
+++ b/provisioning/datasources/datasources.yaml
@@ -1,10 +1,10 @@
 apiVersion: 1
 
 datasources:
-  - name: Business Intelligence Engine
+  - name: Business Engine
     type: volkovlabs-engine-datasource
     access: proxy
-    uid: bi-engine
+    uid: business-engine
     orgId: 1
     version: 1
     editable: true
