--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -41,7 +41,7 @@ jobs:
         run: docker compose up -d
 
       - name: Run e2e tests
-        run: docker compose -f test/docker-compose.yml build && docker compose -f test/docker-compose.yml up --exit-code-from test
+        run: cp .env test && docker compose -f test/docker-compose.yml build && docker compose -f test/docker-compose.yml up --exit-code-from test
 
       - name: Stop Platform
         run: docker compose down
