--- a/provisioning/datasources/datasources.yaml
+++ b/provisioning/datasources/datasources.yaml
@@ -30,3 +30,13 @@ datasources:
     version: 1
     editable: true
     url: http://prometheus:9090
+  - name: Infinity
+    id: 4
+    uid: fdwzblygl5i4gf
+    orgId: 1
+    type: yesoreyeram-infinity-datasource
+    basicAuth: false
+    isDefault: false
+    jsonData:
+      global_queries: []
+    readOnly: false
