--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "name": "business-intelligence",
   "scripts": {
     "start:actions": "docker compose --profile actions pull && docker compose --profile actions up",
+    "start:emulator": "docker compose --profile emulator pull && docker compose --profile emulator up",
     "start:engine": "docker compose --profile engine pull && docker compose --profile engine up",
     "start:grafana": "docker compose --profile grafana pull && docker compose --profile grafana up",
-    "start:emulation": "docker compose --profile emulation pull && docker compose --profile emulation up",
     "stop:actions": "docker compose --profile actions down",
+    "stop:emulator": "docker compose --profile emulator down",
     "stop:engine": "docker compose --profile engine down",
-    "stop:grafana": "docker compose --profile grafana down",
-    "stop:emulation": "docker compose --profile emulation down"
+    "stop:grafana": "docker compose --profile grafana down"
   }
 }
