Update Business Intelligence 2.4.0

--- a/.env
+++ b/.env
@@ -28,10 +28,10 @@ DATABASE_PASSWORD=postgres
 ##
 ## Grafana HTTP API
 ##
-GRAFANA_URL=http://grafana:3000
+## GRAFANA_URL=http://grafana:3000
 
 ## Service Account
 ## - Viewer permission is required to access dashboards
 ## - Editor permission is required to access dashboards and add Annotations
 ##
-GRAFANA_TOKEN=SERVICE-ACCOUNT-TOKEN
+## GRAFANA_TOKEN=SERVICE-ACCOUNT-TOKEN
