--- a/.env
+++ b/.env
@@ -1,26 +1,26 @@
 ########################### Database Configuration #############################################
 ##
-## Database (Timescale) Host
+## Host
 ##
-DATABASE_HOST=timescale
+DATABASE_HOST=postgres
 
 ##
-## Database (Timescale) Port
+## Port
 ##
 DATABASE_PORT=5432
 
 ##
-## Database (Timescale) Name if different from postgres
+## Database name, if different from postgres
 ##
 DATABASE_DB=postgres
 
 ##
-## Database (Timescale) User
+## User name
 ##
 DATABASE_USERNAME=postgres
 
 ##
-## Database (Timescale) Password
+## Password
 ##
 DATABASE_PASSWORD=postgres
 
@@ -28,7 +28,7 @@ DATABASE_PASSWORD=postgres
 ##
 ## Grafana HTTP API
 ##
-## GRAFANA_URL=http://grafana:3000
+## GRAFANA_URL=https://test.grafana.com
 
 ## Service Account
 ## - Viewer permission is required to access dashboards
