--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,17 @@ services:
 
   engine:
     image: ghcr.io/volkovlabs/business-engine:3.3.0
-    env_file: .env
     depends_on:
       - postgres
     ports:
       - "3001-3002:3001"
+    #env_file: .env
+    environment:
+      DATABASE_HOST: postgres
+      DATABASE_PORT: 5432
+      DATABASE_DB: postgres
+      DATABASE_USERNAME: postgres
+      DATABASE_PASSWORD: postgres
     deploy:
       mode: replicated
       replicas: 1
@@ -37,3 +43,9 @@ services:
       - "--web.console.libraries=/etc/prometheus/console_libraries"
       - "--web.console.templates=/etc/prometheus/consoles"
       - "--web.enable-lifecycle"
+
+  json-server:
+    build:
+      context: ./json-server
+    volumes:
+      - ./json-server/events:/app/events
