--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   engine:
     container_name: business-engine
     image: ghcr.io/volkovlabs/business-engine:3.4.0
+    init: true
     depends_on:
       - postgres
     ports:
