--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,7 +4,10 @@ global:
 scrape_configs:
   - job_name: "business-engine"
     static_configs:
-      - targets: ["business-intelligence-engine-1:3001"]
+      - targets: ["business-engine:3001"]
+##
+## Grafana Cloud
+##
 #remote_write:
 #  - url: https://prometheus-blocks-prod-us-central1.grafana.net/api/prom/push
 #    basic_auth:
