--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   engine:
     container_name: business-engine
     image: ghcr.io/volkovlabs/business-engine:3.4.0
+    init: true
     depends_on:
       - postgres
     ports:
@@ -40,13 +41,6 @@ services:
       - "--web.console.libraries=/etc/prometheus/console_libraries"
       - "--web.console.templates=/etc/prometheus/consoles"
       - "--web.enable-lifecycle"
-
-  json-server:
-    container_name: json-server
-    build:
-      context: ./json-server
-    volumes:
-      - ./json-server/events:/app/events
 
   node-red:
     container_name: node-red
