--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,3 +49,14 @@ services:
       - 1880:1880
     volumes:
       - ./node-red/data:/data
+
+  alloy:
+    container_name: alloy
+    image: grafana/alloy:latest
+    ports:
+      - 12345:12345
+    volumes:
+      - ./alloy/config.alloy:/etc/alloy/config.alloy
+      - ./alloy/data:/var/lib/alloy/data
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
