--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - ./postgres:/var/lib/postgresql/data
 
   engine:
-    container_name: business-engine
-    image: ghcr.io/volkovlabs/business-engine:3.5.0
+    container_name: engine
+    image: ghcr.io/volkovlabs/business-engine:3.6.0
     init: true
     depends_on:
       - postgres
@@ -25,22 +25,6 @@ services:
       DATABASE_DB: postgres
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: postgres
-
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    restart: always
-    ports:
-      - 9090:9090
-    volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - ./prometheus/data:/prometheus
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-      - "--storage.tsdb.path=/prometheus"
-      - "--web.console.libraries=/etc/prometheus/console_libraries"
-      - "--web.console.templates=/etc/prometheus/consoles"
-      - "--web.enable-lifecycle"
 
   node-red:
     container_name: node-red
