Add Grafana Alloy and remove Prometheus (#47)
* Add Grafana Alloy

* Update docker-compose.yml

* Remove Prometheus and use Alloy

* Updates

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,8 @@ npm-debug.log*
 
 # Files
 node_modules/
-grafana/
 events/
 postgres/
-prometheus/data
 
 # Editor
 .idea
@@ -17,3 +15,6 @@ prometheus/data
 ## Node-RED
 .config.runtime.json
 node-red/data
+
+## Alloy
+alloy/data
